# Keramik

./: .gitignore  LICENSE  README.md  config.yaml  config_sample.yaml  literature.json  pyproject.toml
archive/: extract_typtafeln.py
data/: README.md
experiments/siamese_model/: inference.txt  model.py  plotting.py  training.py
src/: app.py  clean_pdf.py  create_poc_data.py  icp.py  preprocess.py  ransac.py  run.py  solver.py  test.py  utils.py  visualize.py  visuals.py
src/geometric_matching/: ROADMAP.md  preprocess.py  run.py  solver.py  utils.py  visualize.py
src/siamese_model/: inference.py  plotting.py  siamese_cnn_v1.py  testing.py  utils.py
