[project]
name = "keramik"
version = "0.1.0"
description = ""
authors = [
    {name = "Markus Oldenburger", email = "oldenburgermarkus@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pypdf (>=6.3.0,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false