[project]
name = "keramik"
version = "0.1.0"
description = ""
authors = [
    {name = "Markus Oldenburger", email = "oldenburgermarkus@gmail.com"},
    {name = "Miles Lenz", email = "miles@lenz-be.de"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pypdf (>=6.3.0,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "cairosvg (>=2.8.2,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.16.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false